@@ -1,5 +1,11 @@
 # $Id$
 
+2007-04-12	Anton E. Lebedevich
+	
+	* main/Utils/TextUtils.class.php: downFirst() added.
+
+	* main/Utils/LogicUtils.class.php: getOpenPoint() added.
+
 2007-04-12	Denis M. Gabaidulin
 
 	* meta/patterns/DtoClassPattern.class.php,
